<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:app="http://schemas.android.com/apk/res-auto"
	  xmlns:tools="http://schemas.android.com/tools"
	  tools:context=".MainActivity">

	<item android:id="@+id/action_track"
		  android:title="@string/action_track"
		  android:orderInCategory="90"
		  android:icon="@android:drawable/ic_menu_search"
		  app:showAsAction="ifRoom" />
	<item android:id="@+id/action_faves"
		  android:title="@string/action_show_faves"
		  android:orderInCategory="90"
		  android:icon="@android:drawable/ic_input_get"
		  app:showAsAction="always" />
	<item android:id="@+id/action_bitrate"
		  android:title="@string/action_bitrate"
		  android:orderInCategory="100"
		  android:icon="@android:drawable/ic_menu_preferences"
		  app:showAsAction="always" />
	<item android:id="@+id/action_settings"
		  android:title="@string/action_settings"
		  android:orderInCategory="100"
		  app:showAsAction="never" />
	<item android:id="@+id/action_about"
		  android:title="@string/action_about"
		  android:orderInCategory="100"
		  app:showAsAction="never" />
	<item android:id="@+id/action_refresh"
		  android:title="@string/action_refresh"
		  android:orderInCategory="100"
		  app:showAsAction="never" />
	<item android:id="@+id/action_speedtest"
		  android:title="@string/action_speedtest"
		  android:orderInCategory="100"
		  app:showAsAction="never" />
	<item android:id="@+id/action_open_other"
		  android:title="@string/action_openother"
		  android:orderInCategory="100"
		  app:showAsAction="never" />
	<item android:id="@+id/action_share_station"
		  android:title="@string/action_share_station"
		  android:orderInCategory="100"
		  app:showAsAction="never" />
	<item android:id="@+id/action_exit"
		  android:title="@string/action_exit"
		  android:orderInCategory="110"
		  app:showAsAction="never" />
</menu>