<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.vlad805.internetradio.app.About">
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<LinearLayout
			android:orientation="vertical"
			android:padding="20dp"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			>
			<ImageView
				android:src="@drawable/ic_l"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" />
			<LinearLayout
				android:orientation="vertical"
				android:paddingTop="14dp"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				>
				<TextView
					android:text="@string/app_name"
					android:gravity="center"
					android:padding="5dp"
					android:textSize="20dp"
					android:textStyle="bold"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"/>
				<TextView
					android:text="@string/app_version"
					android:gravity="center"
					android:padding="5dp"
					android:textSize="15dp"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"/>
				<TextView
					android:gravity="center"
					android:text="@string/app_author"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"/>
				<Button
					android:layout_marginTop="15dp"
					android:layout_gravity="center"
					android:text="@string/app_site"
					android:onClick="goSite"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
