<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:orientation="vertical"
    tools:context="ru.vlad805.internetradio.app.RequestTrack">

    <LinearLayout
		android:id="@+id/track_loading"
		android:visibility="gone"
		android:orientation="vertical"
		android:padding="40dp"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<ProgressBar
			android:layout_gravity="center"
			android:layout_width="fill_parent"
			android:layout_height="40dp" />
	</LinearLayout>
	<ScrollView
		android:id="@+id/track_result"
		android:orientation="vertical"
		android:padding="12dp"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<ImageView
				android:id="@+id/track_image"
				android:layout_gravity="center"
				android:src="@android:drawable/ic_menu_gallery"
				android:layout_width="wrap_content"
				android:layout_height="70dp"
				android:contentDescription="@string/n" />
			<TextView
				android:id="@+id/track_title"
				android:textAppearance="@android:style/TextAppearance.Large"
				android:text="@string/n"
				android:textAlignment="gravity"
				android:gravity="center"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"/>
			<TextView
				android:id="@+id/track_artist"
				android:textAppearance="@android:style/TextAppearance.Medium"
				android:text="@string/n"
				android:textAlignment="gravity"
				android:gravity="center"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"/>
			<Button
				android:id="@+id/track_addfave"
				android:text="@string/track_addfave"
				android:layout_gravity="center"
				android:paddingLeft="30dp"
				android:paddingRight="30dp"
				android:onClick="onClick"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"/>
			<Button
				android:id="@+id/track_copy"
				android:text="@string/track_copy"
				android:layout_gravity="center"
				android:paddingLeft="30dp"
				android:paddingRight="30dp"
				android:onClick="onClick"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"/>
			<Button
				android:text="@string/close_button"
				style="@style/AppTheme"
				android:layout_gravity="center"
				android:paddingLeft="30dp"
				android:paddingRight="30dp"
				android:onClick="clickClose"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"/>
		</LinearLayout>
	</ScrollView>
	<LinearLayout
		android:orientation="vertical"
		android:id="@+id/track_error"
		android:padding="20dp"
		android:visibility="gone"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<ImageView
			android:layout_gravity="center"
			android:src="@android:drawable/stat_notify_error"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
		<TextView
			android:paddingTop="20dp"
			android:paddingBottom="20dp"
			android:textAppearance="@android:style/TextAppearance.Large"
			android:text="@string/track_not_found"
			android:gravity="center"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"/>
		<Button
			android:text="@string/close_button"
			style="@style/AppTheme"
			android:layout_gravity="center"
			android:paddingLeft="30dp"
			android:paddingRight="30dp"
			android:onClick="clickClose"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
	</LinearLayout>

</LinearLayout>